--- a/login/login.html
+++ b/login/login.html
@@ -11,13 +11,13 @@
 
   </head>
 
-  <body id="login" style="background-image: url('asset/farcry.jpg'); background-size: cover">
-    <img id="intek-logo" src="asset/intek_logo.png" alt="">
+  <body id="login" style="background-image: url('../asset/farcry.jpg'); background-size: cover">
+    <img id="intek-logo" src="../asset/intek_logo.png" alt="">
     <!------ Login START ---------->
     <div class="container">
         <div id="login-row" class="row justify-content-end">
             <div id="login-column" class="col-md-6 justify-content-center">
-                <img src="asset/far-cry-wide.png" alt="" style="width: 100%; height:auto; margin-left: 70px; margin-top: 50px"> 
+                <img src="../asset/far-cry-wide.png" alt="" style="width: 100%; height:auto; margin-left: 70px; margin-top: 50px"> 
 
                 <div id="login-box" class="col-md-12">
                   <form id="login-form" class="form" action="" method="post">
