--- a/login/login.html
+++ b/login/login.html
@@ -35,7 +35,7 @@
                           <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                       </div>
                       <div id="register-link" class="text-right">
-                          <a href="#" class="text-info">Register here</a>
+                          <a id="register-btn" class="text-info">Register here</a>
                       </div>
                   </form>
                 </div>
@@ -48,8 +48,8 @@
     
 
 
-
-
+    <!-- Register -->
+    <script src="./login.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
