update register + doing homepage + add new register window + fixing problem with jquery in electron - homepate (not finished)

--- a/login/login.html
+++ b/login/login.html
@@ -6,7 +6,7 @@
 
     <!------ Bootstrap CSS ---------->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!------ Header CSS---------->
+    <!------ Login CSS---------->
     <link href="./css/login.css" rel="stylesheet" id="bootstrap-css">
 
   </head>
@@ -32,7 +32,8 @@
                       </div>
                       <div class="form-group">
                           <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                          <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                          <input id="login-submit" type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                          <a href="../home/home.html" class="btn btn-info">Home</a>
                       </div>
                       <div id="register-link" class="text-right">
                           <a id="register-btn" class="text-info">Register here</a>
@@ -48,7 +49,7 @@
     
 
 
-    <!-- Register -->
+    <!-- Register JS-->
     <script src="./login.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
