--- a/register/register.html
+++ b/register/register.html
@@ -3,9 +3,65 @@
   <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- Website Font style -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    
+    <!-- Google Fonts -->
+		<link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+
+    <!------ Bootstrap CSS ---------->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!------ Register CSS---------->
+    <link href="./css/register.css" rel="stylesheet">
+
   </head>
-  <body>
-    <h1>Hello World!</h1>
+
+  <body id="">
+
+    <!-- ---- Register START ---------->
+    <div class="container">
+      <div class="p-3">
+          <h3 class="text-center text-info">Create new account</h3>
+      </div>
+
+
+      <div id="login-row" class="row justify-content-end">
+          <div id="login-column" class="col-md-6 justify-content-center">
+              <div id="login-box" class="col-md-12">
+                <form id="login-form" class="form" action="" method="post">
+                    <div class="form-group">
+                        <label for="username" class="text-info">Username:</label><br>
+                        <input type="text" name="username" id="username" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="text-info">Password:</label><br>
+                        <input type="text" name="password" id="password" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="confirm-password" class="text-info">Confirm Password:</label><br>
+                        <input type="text" name="password" id="password" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="text-info">Email:</label><br>
+                        <input type="text" name="email" id="email" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                    </div>
+                    
+                </form>
+              </div>
+          </div>
+      </div>
+    </div>
+    <!-- ---- Register START ---------->
+
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
