Finish fixing jquery + Chang jquery code to JS code

--- a/home/home.html
+++ b/home/home.html
@@ -24,31 +24,30 @@
 				<div class="blob"></div>
 				<nav>
 					<ul>
-						<li><a href="#">HOME</a>
+						<li><a href="#">START GAME</a>
 							<ul>
 								<li><a href="#">STUFF</a></li>
 								<li><a href="#">STUFF</a></li>
 								<li><a href="#">STUFF</a></li>
 							</ul>
 						</li>
-						<li><a href="#">ABOUT</a>
+						<li><a href="#">SETTING</a>
 							<ul>
 								<li><a href="#">MORE STUFF</a></li>
 								<li><a href="#">OTHER STUFF</a></li>
 								<li><a href="#">TEST STUFF</a></li>
 							</ul>
 						</li>
-						<li><a href="#">TRAVELS</a></li>
-						<li><a href="#">RECIPES</a>
+						<li><a href="#">HISTORY</a></li>
+						<li><a href="#">LAN</a>
 							<ul>
 								<li><a href="#">STUFF</a></li>
 								<li><a href="#">STUFF sss</a></li>
 								<li><a href="#">STUFF</a></li>
 							</ul>
 						</li>
-						<li><a href="#">CONCEPTS</a></li>
-						<li><a href="#">CONTACT</a></li>
-						<li><a href="#">SHOP</a></li>
+
+						<li><a href="#">LOG OUT</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -67,7 +66,6 @@
 		</header>
 		
 		<!-- Header JS -->
-		<script>window.$ = window.jQuery = require('jquery');</script>
 
 		<script src='./home.js'></script>
 		
