update password + add type="password" to password field

--- a/home/home.html
+++ b/home/home.html
@@ -25,20 +25,15 @@
 				<nav>
 					<ul>
 						<li><a href="#">START GAME</a>
-							<ul>
-								<li><a href="#">STUFF</a></li>
-								<li><a href="#">STUFF</a></li>
-								<li><a href="#">STUFF</a></li>
-							</ul>
 						</li>
 						<li><a href="#">SETTING</a>
 							<ul>
-								<li><a href="#">MORE STUFF</a></li>
-								<li><a href="#">OTHER STUFF</a></li>
-								<li><a href="#">TEST STUFF</a></li>
+								<li><a href="#">CHARACTER</a></li>
+								<li><a href="#">CONTROLS</a></li>
+								<li><a href="#">GAME PATH</a></li>
 							</ul>
 						</li>
-						<li><a href="#">HISTORY</a></li>
+						<li><a href="#">MATCH HISTORY</a></li>
 						<li><a href="#">LAN</a>
 							<ul>
 								<li><a href="#">STUFF</a></li>
