--- a/login/login.html
+++ b/login/login.html
@@ -28,7 +28,7 @@
                       </div>
                       <div class="form-group">
                           <label for="password" class="text-info">Password:</label><br>
-                          <input type="text" name="password" id="password" class="form-control">
+                          <input type="password" name="password" id="password" class="form-control">
                       </div>
                       <div class="form-group">
                           <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
@@ -50,7 +50,9 @@
 
 
     <!-- Register JS-->
-    <script src="./login.js"></script>
+    <script src="./js/register_btn.js"></script>
+    <!-- Show password JS-->
+    <script src="./js/password.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
