--- a/register/register.html
+++ b/register/register.html
@@ -37,11 +37,11 @@
                     </div>
                     <div class="form-group">
                         <label for="password" class="text-info">Password:</label><br>
-                        <input type="text" name="password" id="password" class="form-control" >
+                        <input type="password" name="password" id="password" class="form-control" >
                     </div>
                     <div class="form-group">
                         <label for="confirm-password" class="text-info">Confirm Password:</label><br>
-                        <input type="text" name="password" id="password" class="form-control" >
+                        <input type="password" name="password" id="password" class="form-control" >
                     </div>
                     <div class="form-group">
                         <label for="email" class="text-info">Email:</label><br>
