--- a/login/login.html
+++ b/login/login.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!------ Login CSS---------->
     <link href="./css/login.css" rel="stylesheet" id="bootstrap-css">
+    <!------ Password CSS---------->
+    <link href="./css/password.css" rel="stylesheet" id="bootstrap-css">
 
   </head>
 
@@ -26,9 +28,10 @@
                           <label for="username" class="text-info">Username:</label><br>
                           <input type="text" name="username" id="username" class="form-control">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group pass_show">
                           <label for="password" class="text-info">Password:</label><br>
                           <input type="password" name="password" id="password" class="form-control">
+                          <span class="ptxt" onclick="myFunction()">Show</span>
                       </div>
                       <div class="form-group">
                           <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
@@ -52,7 +55,16 @@
     <!-- Register JS-->
     <script src="./js/register_btn.js"></script>
     <!-- Show password JS-->
-    <script src="./js/password.js"></script>
+    <script>
+      function myFunction() {
+        var x = document.getElementById("password");
+        if (x.type === "password") {
+          x.type = "text";
+        } else {
+          x.type = "password";
+        }
+      }
+    </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
