--- a/login/login.html
+++ b/login/login.html
@@ -10,11 +10,13 @@
     <link href="./css/login.css" rel="stylesheet" id="bootstrap-css">
     <!------ Password CSS---------->
     <link href="./css/password.css" rel="stylesheet" id="bootstrap-css">
-
+    <!------ Font Awesome CSS---------->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   </head>
 
   <body id="login" style="background-image: url('../asset/farcry.jpg'); background-size: cover">
     <img id="intek-logo" src="../asset/intek_logo.png" alt="">
+
     <!------ Login START ---------->
     <div class="container">
         <div id="login-row" class="row justify-content-end">
@@ -31,7 +33,7 @@
                       <div class="form-group pass_show">
                           <label for="password" class="text-info">Password:</label><br>
                           <input type="password" name="password" id="password" class="form-control">
-                          <span class="ptxt" onclick="myFunction()">Show</span>
+                          <span class="ptxt"><i id="password_eye" class="fas fa-eye"></i></span>
                       </div>
                       <div class="form-group">
                           <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
@@ -48,23 +50,11 @@
     </div>
     <!------ Login END ---------->
 
-  </div>
-    
-
-
+  
     <!-- Register JS-->
     <script src="./js/register_btn.js"></script>
     <!-- Show password JS-->
-    <script>
-      function myFunction() {
-        var x = document.getElementById("password");
-        if (x.type === "password") {
-          x.type = "text";
-        } else {
-          x.type = "password";
-        }
-      }
-    </script>
+    <script src="./js/password.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
