--- a/login/register/register.html
+++ b/login/register/register.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Register</title>
 
-    <!-- Website Font style -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Google Fonts -->
 		<link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
@@ -15,6 +14,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!------ Register CSS---------->
     <link href="./css/register.css" rel="stylesheet">
+    <!------ Password CSS---------->
+    <link href="../css/password.css" rel="stylesheet">
 
   </head>
 
@@ -35,13 +36,15 @@
                         <label for="username" class="text-info">Username:</label><br>
                         <input type="text" name="username" id="username" class="form-control" >
                     </div>
-                    <div class="form-group">
+                    <div class="form-group pass_show">
                         <label for="password" class="text-info">Password:</label><br>
-                        <input type="password" name="password" id="password" class="form-control" >
+                        <input type="password" name="password" id="password1" class="form-control" >
+                        <span class="ptxt"><i id="password_eye1" class="fas fa-eye"></i></span>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group pass_show">
                         <label for="confirm-password" class="text-info">Confirm Password:</label><br>
-                        <input type="password" name="password" id="password" class="form-control" >
+                        <input type="password" name="password" id="password2" class="form-control" >
+                        <span class="ptxt"><i id="password_eye2" class="fas fa-eye"></i></span>
                     </div>
                     <div class="form-group">
                         <label for="email" class="text-info">Email:</label><br>
@@ -58,7 +61,8 @@
     </div>
     <!-- ---- Register START ---------->
 
-
+    <!-- Show password JS-->
+    <script src="../js/password.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
