--- a/login/register/register.html
+++ b/login/register/register.html
@@ -34,24 +34,24 @@
                 <form id="login-form" class="form" action="" method="post">
                     <div class="form-group">
                         <label for="username" class="text-info">Username:</label><br>
-                        <input type="text" name="username" id="username" class="form-control" >
+                        <input type="text" name="username" id="username" class="form-control require" required>
                     </div>
                     <div class="form-group pass_show">
                         <label for="password" class="text-info">Password:</label><br>
-                        <input type="password" name="password" id="password1" class="form-control" >
+                        <input type="password" name="password" id="password1" class="form-control require" required>
                         <span class="ptxt"><i id="password_eye1" class="fas fa-eye"></i></span>
                     </div>
                     <div class="form-group pass_show">
                         <label for="confirm-password" class="text-info">Confirm Password:</label><br>
-                        <input type="password" name="password" id="password2" class="form-control" >
+                        <input type="password" name="password" id="password2" class="form-control require" required>
                         <span class="ptxt"><i id="password_eye2" class="fas fa-eye"></i></span>
                     </div>
                     <div class="form-group">
                         <label for="email" class="text-info">Email:</label><br>
-                        <input type="text" name="email" id="email" class="form-control" >
+                        <input type="text" name="email" id="email" class="form-control require" required>
                     </div>
                     <div class="form-group">
-                        <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                        <input id="login-submit" type="submit" name="submit" class="btn btn-info btn-md" value="Submit" disabled='disabled'>
                     </div>
                     
                 </form>
@@ -61,8 +61,10 @@
     </div>
     <!-- ---- Register START ---------->
 
+    <!-- Submit button JS-->
+    <script src="../js/submit_btn.js"></script>
     <!-- Show password JS-->
-    <script src="../js/password.js"></script>
+    <script src="./js/register_password.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
