Change structure + Move Register (child screen) folder to Login folder (parent screen). + Rename all page folder to Uppercase

--- a/Home/home.html
+++ b/Home/home.html
@@ -42,7 +42,7 @@
 							</ul>
 						</li>
 
-						<li><a href="#">LOG OUT</a></li>
+						<li><a href="../Login/login.html">LOG OUT</a></li>
 					</ul>
 				</nav>
 			</div>
