--- a/Login/login.html
+++ b/Login/login.html
@@ -38,7 +38,7 @@
                       <div class="form-group">
                           <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
                           <input id="login-submit" type="submit" name="submit" class="btn btn-info btn-md" value="Submit" disabled="disabled">
-                          <a href="../home/home.html" class="btn btn-info">Home</a>
+                          <a href="../Home/home.html" class="btn btn-info">Home</a>
                       </div>
                       <div id="register-link" class="text-right">
                           <a id="register-btn" class="text-info">Register here</a>
