Last push from intek

--- a/Home/home.html
+++ b/Home/home.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 	<head>
 		<meta charset="UTF-8">
-		<title>Love Style Header Menu Effect</title>
+		<title>FarCry Launcher</title>
 				
 				<!------ Bootstrap CSS ---------->
 				<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -30,7 +30,7 @@
 							<ul>
 								<li><a href="#">CHARACTER</a></li>
 								<li><a href="#">CONTROLS</a></li>
-								<li><a href="#">GAME PATH</a></li>
+								<li><a href="#" id="game-path">GAME PATH</a></li>
 							</ul>
 						</li>
 						<li><a href="#">MATCH HISTORY</a></li>
