Calling api from JSONplaceholder

--- a/test.html
+++ b/test.html
@@ -11,13 +11,15 @@
     <button id="getUser">Get User</button>
     <hr>
     <div id="userOutput"></div>
-    <form action="" id="addUser">
+
+    <form action="" id="addPost">
         <div class="form-group">
             <input type="text" id="title" placeholder="Title">
         </div>
         <div class="from-group">
-            <input type="password" id="title" placeholder="Password">
+            <textarea type="" id="body" placeholder="Body"></textarea>
         </div>
+        <input type="submit" value="Submit">
     </form>
 
     <script src="./services/test.js"></script>
