add js call api

--- a/Home/home.html
+++ b/Home/home.html
@@ -24,20 +24,17 @@
 				<div class="blob"></div>
 				<nav>
 					<ul>
-						<li><a href="#">START GAME</a>
-						
-						</li>
+						<li><a href="#" id="haha">START GAME</a></li>
 						<li><a href="#">SETTING</a>
 							<ul>
 								<li><a href="#">CHARACTER</a></li>
 								<li><a href="#" id="game-path">GAME PATH</a></li>
 							</ul>
-							<ul id="inner-setting" class="notselected">
+							<!-- <ul id="inner-setting" class="notselected">
 								<p id="#game-path-head">GAME PATH INNER</p>
 								<li><a><input type="text" name="gamepath_input" id="path"></a></li>
-							</ul>
+							</ul> -->
 						</li>
-						<li><a href="#">MATCH HISTORY</a></li>
 						<li><a href="../Login/login.html">LOG OUT</a></li>
 					</ul>
 				</nav>
@@ -60,6 +57,8 @@
 		<script src='./js/header.js'></script>
 		<!-- Game Path JS -->
 		<script src='./js/game_path.js'></script>
+		<!-- test JS -->
+		<script src='../services/test.js'></script>
 	</body>
 
 </html>
