--- a/test.html
+++ b/test.html
@@ -14,10 +14,10 @@
 
     <form action="" id="addPost">
         <div class="form-group">
-            <input type="text" id="title" placeholder="Title" required>
+            <input type="text" id="username" placeholder="Username" required>
         </div>
         <div class="from-group">
-            <textarea type="" id="body" placeholder="Body" required></textarea>
+            <textarea type="password" id="password" placeholder="Password" required></textarea>
         </div>
         <input type="submit" value="Submit">
     </form>
