--- a/Login/Register/register.html
+++ b/Login/Register/register.html
@@ -31,7 +31,7 @@
       <div id="login-row" class="row justify-content-end">
           <div id="login-column" class="col-md-6 justify-content-center">
               <div id="login-box" class="col-md-12">
-                <form id="login-form" class="form" action="" method="post">
+                <form id="signup-form" class="form" action="" method="post">
                     <div class="form-group">
                         <label for="username" class="text-info">Username:</label><br>
                         <input type="text" name="username" id="username" class="form-control require" required>
@@ -51,7 +51,7 @@
                         <input type="text" name="email" id="email" class="form-control require" required>
                     </div>
                     <div class="form-group">
-                        <input id="login-submit" type="submit" name="submit" class="btn btn-info btn-md" value="Submit" disabled='disabled'>
+                        <input id="register-submit" type="submit" name="submit" class="btn btn-info btn-md" value="Submit" disabled='disabled'>
                     </div>
                     
                 </form>
@@ -62,9 +62,9 @@
     <!-- ---- Register START ---------->
 
     <!-- Submit button JS-->
-    <script src="../js/submit_btn.js"></script>
+    <script src="./js/submitRegister.js"></script>
     <!-- Show password JS-->
-    <script src="./js/register_password.js"></script>
+    <script src="./js/toggleRegisterPassword.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
