--- a/Login/login.html
+++ b/Login/login.html
@@ -38,7 +38,7 @@
                       <div class="form-group">
                           <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
                           <input id="login-submit" type="submit" name="submit" class="btn btn-info btn-md" value="Submit" disabled="disabled">
-                          <a href="../Home/home.html" class="btn btn-info">Home</a>
+                          <!-- <a href="../Home/home.html" class="btn btn-info">Home</a> -->
                       </div>
                       <div id="register-link" class="text-right">
                           <a id="register-btn" class="text-info">Register here</a>
@@ -50,13 +50,15 @@
         </div>
     </div>
     <!------ Login END ---------->
+
     
-    <!-- Submit Button JS-->
-    <script src="./js/submit_btn.js"></script>
-    <!-- Register JS-->
-    <script src="./js/register_btn.js"></script>
-    <!-- Show password JS-->
-    <script src="./js/password.js"></script>
+    
+    <!-- Submit sign-in form -->
+    <script src="./js/submitSignin.js"></script>
+    <!-- Open register window -->
+    <script src="./js/openRegisterWindow.js"></script>
+    <!-- Toggle password visibility -->
+    <script src="./js/togglePassword.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
